# guardian

./: .black  .env-dev  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  0002-testing-frontend.md  AGENTS.md  README.dev.md  README.md  Vagrantfile  dev-compose-mariadb.yaml  dev-compose-postgres.yaml  dev-compose.yaml  dev-run  docker-compose.yaml  pyproject.toml  renovate.json  sonar-project.properties
authorization-api/: .coveragerc  Dockerfile  README.md  pyproject.toml
authorization-api/guardian_authorization_api/: adapter_registry.py  adapters.py  business_logic.py  constants.py  errors.py  logging.py  main.py  persistence.py  ports.py  routes.py  settings.py  udm_client.py
authorization-api/guardian_authorization_api/adapters/: api.py  base.py  incoming.py  persistence.py  policies.py  settings.py
authorization-api/guardian_authorization_api/models/: api.py  opa.py  persistence.py  policies.py  ports.py  routes.py  settings.py
authorization-api/s6-rc.d/guardian_authorization_api/: finish  run
authorization-api/tests/: conftest.py  mock_classes.py  test_adapter_registry.py  test_adapters.py  test_architecture.py  test_authentication.py  test_business_logic.py  test_logging.py  test_main.py  test_persistence.py  test_ports.py  test_settings.py
authorization-api/tests/adapters/: test_api.py  test_base.py  test_persistence.py  test_policies.py  test_settings.py
authorization-api/tests/routes/: conftest.py  test_app.py  test_get_permissions.py  test_permission.py  test_permissions_check.py
authorization-client/: README.md  pyproject.toml
authorization-client/guardian_authorization_client/: __init__.py  authorization.py  config.py  management.py
guardian-lib/: CHANGELOG.md  README.md  pyproject.toml
guardian-lib/guardian_lib/: adapter_registry.py  authorization.py  errors.py  logging.py  ports.py
guardian-lib/guardian_lib/adapters/: authentication.py  settings.py
guardian-lib/guardian_lib/models/: authentication.py  settings.py
guardian-lib/guardian_pytest/: architecture.py  authentication.py
guardian-lib/tests/: conftest.py  test_adapter_registry.py  test_architecture.py  test_logging.py  test_ports.py
guardian-lib/tests/adapters/: test_authentication.py  test_settings.py
guardian-pytest/: README.md  pyproject.toml
management-api/: .coveragerc  Dockerfile  README.md  alembic.ini  pyproject.toml  update_client_secret.sh
management-api/alembic/: README.md  env.py
management-api/alembic/1.0.0_builtin_conditions/: actor_does_not_have_role.json  actor_does_not_have_role.rego  actor_does_not_have_role_test.rego  no_targets.json  no_targets.rego  no_targets_test.rego  only_if_param_result_true.json  only_if_param_result_true.rego  only_if_param_result_true_test.rego  target_does_not_have_role.json  target_does_not_have_role.rego  target_does_not_have_role_in_same_context.json  target_does_not_have_role_in_same_context.rego  target_does_not_have_role_test.rego  target_field_equals_actor_field.json  target_field_equals_actor_field.rego  target_field_equals_actor_field_test.rego  target_field_equals_value.json  target_field_equals_value.rego  target_field_equals_value_test.rego  target_field_not_equals_value.json  target_field_not_equals_value.rego  target_field_not_equals_value_test.rego  target_has_role.json  target_has_role.rego  target_has_role_in_same_context.json  target_has_role_in_same_context.rego  target_has_role_test.rego  target_has_same_context.json  target_has_same_context.rego  target_is_self.json  target_is_self.rego  target_is_self_test.rego  utils.rego
management-api/alembic/3.0.1_builtin_conditions/: actor_field_equals_value.json  actor_field_equals_value_test.rego
management-api/alembic/3.0.4_builtin_conditions/: actor_field_equals_value.rego
management-api/alembic/versions/: 1.0.0_initial_schema.py  2.0.0_positional_condition_params.py  3.0.10_add_flags_to_models.py  3.0.1_new_builtin_conditions.py  3.0.4_new_builtin_conditions.py  4.0.0_role_capability_nm.py
management-api/entrypoint.d/: m2m_secret.sh
management-api/guardian_management_api/: adapter_registry.py  business_logic.py  constants.py  correlation_id.py  errors.py  logging.py  main.py  routes.py
management-api/guardian_management_api/adapters/: app.py  authz.py  bundle_server.py  capability.py  condition.py  context.py  fastapi_utils.py  namespace.py  permission.py  role.py  settings.py  sql_persistence.py
management-api/guardian_management_api/models/: app.py  authz.py  base.py  capability.py  condition.py  context.py  flags.py  namespace.py  permission.py  role.py  routes.py  settings.py  sql_persistence.py
management-api/guardian_management_api/ports/: __init__.py  app.py  authz.py  base.py  bundle_server.py  capability.py  condition.py  context.py  endpoint.py  namespace.py  permission.py  role.py  role_capability_mapping.py  settings.py
management-api/guardian_management_api/routers/: app.py  capabilities.py  capability.py  condition.py  context.py  custom_endpoint.py  mapping.py  namespace.py  permission.py  role.py
management-api/rego_policy_bundle_template/: .manifest
management-api/rego_policy_bundle_template/univention/: base.rego  base_test.rego  utils.rego  utils_test.rego
management-api/s6-rc.d/guardian_management_api/: finish  run
management-api/tests/: conftest.py  test_adapter_registry.py  test_architecture.py  test_authentication.py  test_business_logic.py  test_constants.py  test_endpoints_app.py  test_logging.py  test_main.py  test_ports.py
management-api/tests/adapters/: test_adapters_app.py  test_adapters_permission.py  test_adapters_role.py  test_app_namespace_delete.py  test_authz.py  test_bundle_server.py  test_capability.py  test_condition.py  test_context.py  test_namespace.py  test_role.py  (+3 more)
port-loader/: .coveragerc  CHANGELOG.md  README.md  pyproject.toml
port-loader/port_loader/: __init__.py  adapters.py  errors.py  injection.py  models.py  registries.py  utils.py
port-loader/tests/: conftest.py  test_injection.py  test_registries.py  test_utils.py
(+535 files in other folders)
