# Copyright (C) 2023 Univention GmbH
#
# SPDX-License-Identifier: AGPL-3.0-only

[tool.poetry]
name = "authorization-api"
version = "3.0.0"
description = ""
authors = ["UCS School Maintainers <ucsschool-maintainers@univention.de>"]
readme = "README.md"
packages = [{include = "guardian_authorization_api"}, ]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.8.2"
fastapi = "<0.200"
gunicorn = "^20.1.0"
uvicorn = "^0.32.0"
loguru = "^0.7.0"
orjson = "^3.9.0"
opa-client = {version = "^1.0.3", source = "opa-client"}
requests = "^2.31.0"
uritemplate = "^4.1.1"
guardian-lib = "1.6.0"

[tool.poetry.plugins."guardian_authorization_api.SettingsPort"]
"env" = "guardian_lib.adapters.settings:EnvSettingsAdapter"

[tool.poetry.plugins."guardian_authorization_api.PersistencePort"]
"udm_data" = "guardian_authorization_api.adapters.persistence:UDMPersistenceAdapter"

[tool.poetry.plugins."guardian_authorization_api.PolicyPort"]
"opa" = "guardian_authorization_api.adapters.policies:OPAAdapter"

[tool.poetry.plugins."guardian_authorization_api.AuthenticationPort"]
"fast_api_always_authorized" = "guardian_lib.adapters.authentication:FastAPIAlwaysAuthorizedAdapter"
"fast_api_never_authorized" = "guardian_lib.adapters.authentication:FastAPINeverAuthorizedAdapter"
"fast_api_oauth2" = "guardian_lib.adapters.authentication:FastAPIOAuth2"

[tool.poetry.group.dev.dependencies]
pytest = "<8"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "<0.22"
Faker = "^19.6.1"
httpx = "^0.27.0"
cryptography = "^41.0.4"


[[tool.poetry.source]]
name = "opa-client"
url = "https://git.knut.univention.de/api/v4/projects/688/packages/pypi/simple"
priority = "explicit"


[[tool.poetry.source]]
name = "guardian"
url = "https://git.knut.univention.de/api/v4/projects/830/packages/pypi/simple"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "guardian-lib"
url = "https://git.knut.univention.de/api/v4/projects/908/packages/pypi/simple"
priority = "supplemental"

[tool.pytest.ini_options]
markers = [
    "integration: marks test as requiring services outside of the guardian",
    "in_container_test: marked test is relying on services outside the authzorization-api (e.g.: opa)",
]
# DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html
filterwarnings = ["ignore::DeprecationWarning:gunicorn.util:25"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
