# Copyright (C) 2023-2025 Univention GmbH
#
# SPDX-License-Identifier: AGPL-3.0-only

[tool.poetry]
name = "authorization-api"
version = "3.0.2"
description = ""
authors = ["UCS School Maintainers <ucsschool-maintainers@univention.de>"]
readme = "README.md"
packages = [{include = "guardian_authorization_api"}, ]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
fastapi = "^0.115.0"
gunicorn = "^23.0.0"
uvicorn = "^0.38.0"
loguru = "^0.7.3"
orjson = "^3.11.4"
opa-client = {version = "^1.0.3", source = "opa-client"}
requests = "^2.32.5"
uritemplate = "^4.2.0"
guardian-lib = "1.8.0"
packaging = "^24.1"

[tool.poetry.plugins."guardian_authorization_api.SettingsPort"]
"env" = "guardian_lib.adapters.settings:EnvSettingsAdapter"

[tool.poetry.plugins."guardian_authorization_api.PersistencePort"]
"udm_data" = "guardian_authorization_api.adapters.persistence:UDMPersistenceAdapter"

[tool.poetry.plugins."guardian_authorization_api.PolicyPort"]
"opa" = "guardian_authorization_api.adapters.policies:OPAAdapter"

[tool.poetry.plugins."guardian_authorization_api.AuthenticationPort"]
"fast_api_always_authorized" = "guardian_lib.adapters.authentication:FastAPIAlwaysAuthorizedAdapter"
"fast_api_never_authorized" = "guardian_lib.adapters.authentication:FastAPINeverAuthorizedAdapter"
"fast_api_oauth2" = "guardian_lib.adapters.authentication:FastAPIOAuth2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
pytest-asyncio = "^1.3.0"
Faker = "^38.2.0"
httpx = "^0.28.1"
cryptography = "^46.0.3"


[[tool.poetry.source]]
name = "opa-client"
url = "https://git.knut.univention.de/api/v4/projects/688/packages/pypi/simple"
priority = "explicit"


[[tool.poetry.source]]
name = "guardian"
url = "https://git.knut.univention.de/api/v4/projects/830/packages/pypi/simple"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "guardian-lib"
url = "https://git.knut.univention.de/api/v4/projects/908/packages/pypi/simple"
priority = "supplemental"

[tool.pytest.ini_options]
markers = [
    "integration: marks test as requiring services outside of the guardian",
    "in_container_test: marked test is relying on services outside the authzorization-api (e.g.: opa)",
]
# DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html
filterwarnings = ["ignore::DeprecationWarning:gunicorn.util:25"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
