# Copyright (C) 2023-2026 Univention GmbH
#
# SPDX-License-Identifier: AGPL-3.0-only

[project]
name = "authorization-api"
version = "3.0.6"
description = ""
authors = [
    {name = "UCS School Maintainers", email = "ucsschool-maintainers@univention.de"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "fastapi>=0.135.1",
    "gunicorn>=23.0.0",
    "uvicorn>=0.38.0",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "opa-client>=1.0.3",
    "requests>=2.32.5",
    "uritemplate>=4.2.0",
    "guardian-lib",
    "packaging>=24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "faker>=38.2.0",
    "httpx>=0.28.1",
    "cryptography>=46.0.3",
]

[tool.uv.sources]
opa-client = { index = "opa-client" }

[project.entry-points."guardian_authorization_api.SettingsPort"]
"env" = "guardian_lib.adapters.settings:EnvSettingsAdapter"

[project.entry-points."guardian_authorization_api.PersistencePort"]
"udm_data" = "guardian_authorization_api.adapters.persistence:UDMPersistenceAdapter"

[project.entry-points."guardian_authorization_api.PolicyPort"]
"opa" = "guardian_authorization_api.adapters.policies:OPAAdapter"

[project.entry-points."guardian_authorization_api.AuthenticationPort"]
"fast_api_always_authorized" = "guardian_lib.adapters.authentication:FastAPIAlwaysAuthorizedAdapter"
"fast_api_never_authorized" = "guardian_lib.adapters.authentication:FastAPINeverAuthorizedAdapter"
"fast_api_oauth2" = "guardian_lib.adapters.authentication:FastAPIOAuth2"

[tool.pytest.ini_options]
addopts = "-m 'not integration and not in_container_test'"
markers = [
    "integration: marks test as requiring services outside of the guardian",
    "in_container_test: marked test is relying on services outside the authzorization-api (e.g.: opa)",
]
filterwarnings = ["ignore::DeprecationWarning:gunicorn.util:25"]

[tool.hatch.build.targets.wheel]
packages = ["guardian_authorization_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
