# Copyright (C) 2026 Univention GmbH
#
# SPDX-License-Identifier: AGPL-3.0-only

[tool.poetry]
name = "guardian-authorization-client"
version = "0.1.0"
description = "Client library for Guardian authorization and management APIs"
authors = ["Univention GmbH <packages@univention.de>"]
readme = "README.md"
packages = [{include = "guardian_authorization_client"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.0"
pyyaml = "^6.0"
python-ldap = "^3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
