# Copyright (C) 2026 Univention GmbH
#
# SPDX-License-Identifier: AGPL-3.0-only

[project]
name = "guardian-authorization-client"
version = "0.1.0"
description = "Client library for Guardian authorization and management APIs"
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-ldap>=3.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["guardian_authorization_client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
