# Copyright (C) 2023 Univention GmbH
#
# SPDX-License-Identifier: AGPL-3.0-only

[tool.poetry]
name = "guardian-lib"
version = "1.3.0"
description = ""
authors = ["Ole Schwiegert <schwiegert@univention.de>"]
readme = "README.md"
packages = [{include = "guardian_lib"}, {include = "guardian_pytest"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
port-loader = "1.0.3"
lazy-object-proxy = "^1.9.0"
pydantic = "^1.8.2"
fastapi = "^0.100.0"
pyjwt = "^2.8.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
cryptography = "^41.0.3"

[[tool.poetry.source]]
name = "guardian"
url = "https://git.knut.univention.de/api/v4/projects/830/packages/pypi/simple"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "port-loader"
url = "https://git.knut.univention.de/api/v4/projects/908/packages/pypi/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
