# Copyright (C) 2023-2025 Univention GmbH
#
# SPDX-License-Identifier: AGPL-3.0-only

[project]
name = "guardian-lib"
version = "1.8.1"
description = ""
authors = [
    {name = "UCS School Maintainers", email = "ucsschool-maintainers@univention.de"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "port-loader==1.2.0",
    "lazy-object-proxy>=1.12.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "fastapi<0.200",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "pytestarch>=4.0.1",
    "cryptography>=46.0.3",
]

[tool.uv.sources]
port-loader = { index = "port-loader" }

[tool.hatch.build.targets.wheel]
packages = ["guardian_lib", "guardian_pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
