# Copyright (C) 2023 Univention GmbH
#
# SPDX-License-Identifier: AGPL-3.0-only

[tool.poetry]
name = "management-api"
version = "0.1.0"
description = ""
authors = ["Ole Schwiegert <schwiegert@univention.de>"]
readme = "README.md"
packages = [{include = "guardian_management_api"}, ]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
pydantic = "^1.8.2"
fastapi = "^0.100.0"
gunicorn = "^20.1.0"
uvicorn = "^0.22.0"
loguru = "^0.7.0"
orjson = "^3.9.0"
sqlalchemy = "^2.0.20"
alembic = "^1.11.3"
aiosqlite = "^0.19.0"
guardian-lib = "^1.0.0"
asyncpg = "^0.28.0"
aiomysql = "^0.2.0"

[tool.poetry.plugins."guardian_management_api.SettingsPort"]
"env" = "guardian_lib.adapters.settings:EnvSettingsAdapter"

[tool.poetry.plugins."guardian_management_api.AppPersistencePort"]
"in_memory" = "guardian_management_api.adapters.app:AppStaticDataAdapter"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"

[tool.poetry.group.testing.dependencies]
pytest-env = "^0.8.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "guardian"
url = "https://git.knut.univention.de/api/v4/projects/830/packages/pypi/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    # ports should not be tested, adapters should
    "*/ports/*",
    ]

[tool.pytest.ini_options]
env = [
    "GUARDIAN__MANAGEMENT__BASE_URL = http://localhost:8001"
]
