# Copyright (C) 2023-2025 Univention GmbH
#
# SPDX-License-Identifier: AGPL-3.0-only

[tool.poetry]
name = "management-api"
version = "3.0.3"
description = ""
authors = ["UCS School Maintainers <ucsschool-maintainers@univention.de>"]
readme = "README.md"
packages = [{include = "guardian_management_api"}, ]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
fastapi = "<0.200"
gunicorn = "^23.0.0"
uvicorn = "^0.38.0"
loguru = "^0.7.3"
orjson = "^3.11.4"
sqlalchemy = "^2.0.44"
alembic = "^1.17.2"
aiosqlite = "^0.21.0"
guardian-lib = "1.8.1"
asyncpg = "^0.31.0"
aiofiles = "^25.1.0"
aioshutil = "^1.6"
types-pymysql = "^1.1.0.1"
authlib = "^1.6.5"
packaging = "^24.1"

[tool.poetry.plugins."guardian_management_api.SettingsPort"]
"env" = "guardian_lib.adapters.settings:EnvSettingsAdapter"

[tool.poetry.plugins."guardian_management_api.AppPersistencePort"]
"sql" = "guardian_management_api.adapters.app:SQLAppPersistenceAdapter"

[tool.poetry.plugins."guardian_management_api.ConditionPersistencePort"]
"sql" = "guardian_management_api.adapters.condition:SQLConditionPersistenceAdapter"

[tool.poetry.plugins."guardian_management_api.ContextPersistencePort"]
"sql" = "guardian_management_api.adapters.context:SQLContextPersistenceAdapter"

[tool.poetry.plugins."guardian_management_api.NamespacePersistencePort"]
"sql" = "guardian_management_api.adapters.namespace:SQLNamespacePersistenceAdapter"

[tool.poetry.plugins."guardian_management_api.PermissionPersistencePort"]
"sql" = "guardian_management_api.adapters.permission:SQLPermissionPersistenceAdapter"

[tool.poetry.plugins."guardian_management_api.RolePersistencePort"]
"sql" = "guardian_management_api.adapters.role:SQLRolePersistenceAdapter"

[tool.poetry.plugins."guardian_management_api.CapabilityPersistencePort"]
"sql" = "guardian_management_api.adapters.capability:SQLCapabilityPersistenceAdapter"

[tool.poetry.plugins."guardian_management_api.AuthenticationPort"]
"fast_api_always_authorized" = "guardian_lib.adapters.authentication:FastAPIAlwaysAuthorizedAdapter"
"fast_api_never_authorized" = "guardian_lib.adapters.authentication:FastAPINeverAuthorizedAdapter"
"fast_api_oauth2" = "guardian_lib.adapters.authentication:FastAPIOAuth2"

[tool.poetry.plugins."guardian_management_api.ResourceAuthorizationPort"]
"always" = "guardian_management_api.adapters.authz:AlwaysAuthorizedAdapter"
"never" = "guardian_management_api.adapters.authz:NeverAuthorizedAdapter"
"guardian" = "guardian_management_api.adapters.authz:GuardianAuthorizationAdapter"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"
cryptography = "^46.0.3"

[tool.poetry.group.testing.dependencies]
pytest-env = "^1.2.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "guardian"
url = "https://git.knut.univention.de/api/v4/projects/830/packages/pypi/simple"
priority = "supplemental"


[[tool.poetry.source]]
name = "guardian-lib"
url = "https://git.knut.univention.de/api/v4/projects/908/packages/pypi/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    # ports should not be tested, adapters should
    "*/ports/*",
    ]

[tool.pytest.ini_options]
markers = [
    "e2e: marks test that test the routes with full integration",
    "e2e_udm: marks test that need an UDM instance"
]
