# Copyright (C) 2023-2026 Univention GmbH
#
# SPDX-License-Identifier: AGPL-3.0-only

[project]
name = "management-api"
version = "3.0.6"
description = ""
authors = [
    {name = "UCS School Maintainers", email = "ucsschool-maintainers@univention.de"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "fastapi<0.200",
    "gunicorn>=23.0.0",
    "uvicorn>=0.38.0",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "sqlalchemy>=2.0.44",
    "alembic>=1.17.2",
    "aiosqlite>=0.21.0",
    "guardian-lib",
    "asyncpg>=0.31.0",
    "aiofiles>=25.1.0",
    "aioshutil>=1.6",
    "types-pymysql>=1.1.0.1",
    "authlib>=1.6.5",
    "packaging>=24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-env>=1.2.0",
    "cryptography>=46.0.3",
]

[project.entry-points."guardian_management_api.SettingsPort"]
"env" = "guardian_lib.adapters.settings:EnvSettingsAdapter"

[project.entry-points."guardian_management_api.AppPersistencePort"]
"sql" = "guardian_management_api.adapters.app:SQLAppPersistenceAdapter"

[project.entry-points."guardian_management_api.ConditionPersistencePort"]
"sql" = "guardian_management_api.adapters.condition:SQLConditionPersistenceAdapter"

[project.entry-points."guardian_management_api.ContextPersistencePort"]
"sql" = "guardian_management_api.adapters.context:SQLContextPersistenceAdapter"

[project.entry-points."guardian_management_api.NamespacePersistencePort"]
"sql" = "guardian_management_api.adapters.namespace:SQLNamespacePersistenceAdapter"

[project.entry-points."guardian_management_api.PermissionPersistencePort"]
"sql" = "guardian_management_api.adapters.permission:SQLPermissionPersistenceAdapter"

[project.entry-points."guardian_management_api.RolePersistencePort"]
"sql" = "guardian_management_api.adapters.role:SQLRolePersistenceAdapter"

[project.entry-points."guardian_management_api.CapabilityPersistencePort"]
"sql" = "guardian_management_api.adapters.capability:SQLCapabilityPersistenceAdapter"

[project.entry-points."guardian_management_api.AuthenticationPort"]
"fast_api_always_authorized" = "guardian_lib.adapters.authentication:FastAPIAlwaysAuthorizedAdapter"
"fast_api_never_authorized" = "guardian_lib.adapters.authentication:FastAPINeverAuthorizedAdapter"
"fast_api_oauth2" = "guardian_lib.adapters.authentication:FastAPIOAuth2"

[project.entry-points."guardian_management_api.ResourceAuthorizationPort"]
"always" = "guardian_management_api.adapters.authz:AlwaysAuthorizedAdapter"
"never" = "guardian_management_api.adapters.authz:NeverAuthorizedAdapter"
"guardian" = "guardian_management_api.adapters.authz:GuardianAuthorizationAdapter"

[tool.coverage.run]
omit = [
    "*/ports/*",
]

[tool.pytest.ini_options]
addopts = "-m 'not e2e and not e2e_udm'"
markers = [
    "e2e: marks test that test the routes with full integration",
    "e2e_udm: marks test that need an UDM instance",
]
env = ["GUARDIAN__MANAGEMENT__BASE_URL=http://localhost:8001"]

[tool.hatch.build.targets.wheel]
packages = ["guardian_management_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
