# Copyright (C) 2023 Univention GmbH
#
# SPDX-License-Identifier: AGPL-3.0-only

[tool.poetry]
name = "port-loader"
version = "1.0.0"
description = ""
authors = ["Ole Schwiegert <schwiegert@univention.de>"]
readme = "README.md"
packages = [{include = "port_loader"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
